# sudoku

./: Cargo.toml
examples/: basic.rs
src/: board.rs  lib.rs
